[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LunaNode"
version = "1.0.0"
description = "Luna Node - Fast GPU Miner"
authors = [
    {name = "Ling Lin", email = "taellinglin@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flet>=0.10.0",
    "qrcode[pil]>=7.4.0",
    "lunalib>=1.0.0",
    "requests>=2.25.0",
    "cryptography>=3.4.0",
    "pillow",
    "certifi"
]

[project.urls]
Homepage = "https://linglin.art"
Documentation = "https://bank.linglin.art"

[project.scripts]
LunaNode = "main:main"

[tool.pyinstaller]
main-file = "main.py"
console = false
name = "LunaNode"
upx = true
icon = "./node_icon.ico"
binaries = []
datas = [
    {path = "gui/*.py", dest = "gui"},
    {path = "assets/**", dest = "assets"},
    {path = "data/**", dest = "data"},
    {path = "images/**", dest = "images"},
    {path = "utils.py", dest = "."},
]
hiddenimports = [
    "lunalib",
    "lunalib.core.blockchain",
    "lunalib.core.mempool",
    "lunalib.core.p2p",
    "lunalib.core.wallet",
    "lunalib.transactions",
    "lunalib.transactions.transactions",
    "lunalib.mining",
    "lunalib.mining.miner",
    "lunalib.mining.difficulty",
    "lunalib.mining.cuda_manager",
    "lunalib.mining.gpu_miner",
    "lunalib.core",
    "lunalib.storage",
    "lunalib.storage.cache",
    "lunalib.storage.database",
    "lunalib.gtx",
    "lunalib.utils",
    "lunalib.nodes",
    "requests",
    "qrcode",
    "PIL",
    "PIL._imaging",
    "certifi",
    "cryptography.hazmat.bindings._rust",
    "cryptography.hazmat.bindings._openssl",
    "cupy",
    "cupy.cuda",
    "cupy.cuda.runtime",
    "cupy.cuda.memory",
    "cupy.cuda.device",
    "cupy.cuda.compiler",
    "cupy.cuda.stream",
    "cupy.cuda.function",
    "cupy.cuda.driver",
    "cupy.cuda.pinned_memory",
    "cupy._core",
    "cupy._core.core",
    "cupy._core._dtype",
    "cupy._core._kernel",
    "cupy._core._routines_manipulation",
    "cupy._core._routines_math",
    "cupy._core._scalar",
    "cupy.fft",
    "cupy.linalg",
    "cupy.random",
    "cupy_cuda12x",
    "cupy_cuda12x.cuda",
    "fastrlock",
    "numpy",
    "numpy.core",
    "numpy.core._multiarray_umath",
    "numpy._core",
    "numpy._core._multiarray_umath",
    "tqdm",
    "rich"
]
excludes = [
    "tkinter",
    "test",
    "unittest",
    "pydoc",
    "distutils",
    "pystray"
]
version-file = "version_info.txt"

[tool.pyinstaller.windows]
target_arch = "x64"